Сделал FabricWindow, исправлены контроллеры
